Fix header wrapping

--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,9 @@ body {
   margin-top: 13px;
   margin-left: 25px;
   margin-bottom: 19px;
-  display: flex;
   width: 450px;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -143,29 +144,31 @@ body {
   border-radius: 19px;
   align-items: center;
 }
-.book-title{
+
+.book-title {
   width: 90%;
   background-color: #373b51;
   border-radius: 17%;
   text-align: center;
-  font-family: 'Brush Script MT', cursive;
+  font-family: "Brush Script MT", cursive;
   font-size: 1.8rem;
   font-weight: 600;
-color: #DAA49A;
+  color: #daa49a;
 }
-.book-x-button{
+
+.book-x-button {
   width: 20px;
   height: 20px;
   background-color: red;
   align-self: end;
   border-radius: 20px;
 }
-.book-status{
+
+.book-status {
   width: 20px;
   height: 20px;
   background-color: lightgoldenrodyellow;
   align-self: start;
   justify-self: end;
   border-radius: 20px;
-
 }
